feat test.ipynb : added more tests for orthogonalProjection.

--- a/objectsTest.ipynb
+++ b/objectsTest.ipynb
@@ -4,8 +4,41 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This is the file where we will rewrite the tests using unittest for the object-oriented version."
+    "This is the file where we will rewrite the tests using unittest for the object-oriented version.\n",
+    "\n",
+    "Format of the paths : p = [P1,P2,...] where P1, P2 are Points."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Imports\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import unittest\n",
+    "\n",
+    "import solution as sl ## the solution notebook exported as a script"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO : Put here the parsing part."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
