--- a/solution.ipynb
+++ b/solution.ipynb
@@ -84,11 +84,11 @@
     "                # the points form the right triangle -> intersectPoint, coordth[i+1], coordexp[i+1]\n",
     "                base = seg_length(coordExp[j+1], intersectPoint)\n",
     "                height =  seg_length(coordTh[i+1], ortogonalProjection(coordExp[j+1], intersectPoint, coordTh[i]))\n",
-    "                areaRightTriangle(base, height)\n",
+    "                area += areaRightTriangle(base, height)\n",
     "                \n",
     "                j += 1 # advance along the experimental path  \n",
     "        else:      \n",
-    "            if ort1 and ort2:\n",
+    "            if ort1 and ort2: # What is this for ? There is no chance they are None.\n",
     "                #area += computeArea(ort1, ort2, coordExp[j], coordExp[j+1])\n",
     "                \n",
     "                # area is given by the triangle -> ort1, ort2, exp[j]\n",
@@ -217,9 +217,11 @@
     "    arg3 y: A tuple, the coordinates of a point on the experimental trajectory\n",
     "    return: newPoint. A tuple, the coordinates of the orthogonal projection on y on the segment [x_1,x_2]\n",
     "    \"\"\"\n",
+    "    newPoint = None\n",
     "    \n",
     "    if x_1[0] == x_2[0] :\n",
     "        # First case : the line containing x_1 and x_2 is vertical\n",
+    "        # Be careful ! If the ordinate is not in the segment then we have to change it.\n",
     "        newPoint = (x_1[0],y[1])\n",
     "        \n",
     "    elif pointBelongsToSegment(x_1, x_2, y): # y already belongs to the segemnt [x_1, x_2]\n",
@@ -244,7 +246,10 @@
     "    \n",
     "    ## express the line passing by x_1 and x_2\n",
     "    ## line = (x_2[1]-x_1[1])/(x_2[0]-x_1[0])\n",
-    "    \n",
+    "    print(\"Projection on Point(\" + str(x_1) \\\n",
+    "          + \") and Point(\" + str(x_2) \\\n",
+    "          + \") of Point(\" + str(y)\\\n",
+    "          +\" = Point(\" + str(newPoint) + \")\")\n",
     "    return newPoint\n",
     "                       \n",
     "def computeArea(x_1, x_2, y_1, y_2):               \n",
