--- a/test.ipynb
+++ b/test.ipynb
@@ -9,7 +9,7 @@
     "Format of the paths : p = [(x,y),...]\n",
     "\n",
     "1st : simple, and then more complex.\n",
-    "Easiest : same number of points in both paths. No crossing. No going back. On segent. Same position at the beginning. Same position at the arrival."
+    "Easiest : same number of points in both paths. No crossing. No going back. On segment. Same position at the beginning. Same position at the arrival."
    ]
   },
   {
@@ -236,9 +236,18 @@
     "        \n",
     "    # Test 7 : when starting point and last point are the same\n",
     "    \n",
+    "    def test_startEqualsLastInTheo(self):\n",
+    "        pass\n",
+    "    \n",
     "    # Test 8 : 2 crossings\n",
     "    \n",
-    "    # Test 9 : crossing with UTurn\n"
+    "    def test_twoCrossings(self):\n",
+    "        pass    \n",
+    "    \n",
+    "    # Test 9 : crossing with UTurn\n",
+    "    \n",
+    "    def test_crossingWithUturn(self):\n",
+    "        pass\n"
    ]
   },
   {
@@ -357,21 +366,70 @@
     "    \"\"\"\n",
     "    Unit testing code for the orthogonal projection brick.\n",
     "    \"\"\"\n",
+    "    \n",
+    "    def test_projectionNotInSegment(self):\n",
+    "        segA_1 = (0,0)\n",
+    "        segA_2 = (0,2)\n",
+    "        y = (-1,-1)\n",
+    "        \n",
+    "        self.assertEqual(None, sl.ortogonalProjection(segA_1, segA_2, y))# expected (0,1)\n",
     "\n",
-    "    def test_simplestCase(self):\n",
+    "    def test_projectionOnVerticalLineFromRight(self):\n",
     "        segA_1 = (0,0)\n",
     "        segA_2 = (0,2)\n",
     "        y = (1,1)\n",
     "        \n",
     "        self.assertEqual((0,1), sl.ortogonalProjection(segA_1, segA_2, y))# expected (0,1)\n",
     "        \n",
-    "    def test_intersectingPaths(self):\n",
+    "    def test_projectionOnVerticalLineFromLeft(self):\n",
+    "        segA_1 = (0,0)\n",
+    "        segA_2 = (0,2)\n",
+    "        y = (-1,1)\n",
+    "        \n",
+    "        self.assertEqual((0,1), sl.ortogonalProjection(segA_1, segA_2, y))# expected (0,1)\n",
+    "        \n",
+    "    def test_projectionOnHorizontalLineFromAbove(self):\n",
+    "        segA_1 = (0,0)\n",
+    "        segA_2 = (2,0)\n",
+    "        y = (1,1)\n",
+    "        \n",
+    "        self.assertEqual((1,0), sl.ortogonalProjection(segA_1, segA_2, y))# expected (1,0)\n",
+    "    \n",
+    "    def test_projectionOnHorizontalLineFromBelow(self):\n",
+    "        segA_1 = (0,0)\n",
+    "        segA_2 = (2,0)\n",
+    "        y = (1,-1)\n",
+    "        \n",
+    "        self.assertEqual((1,0), sl.ortogonalProjection(segA_1, segA_2, y))# expected (1,0)\n",
+    "    \n",
+    "    def test_alreadyInSegment(self):\n",
     "        segA_1 = (0,0)\n",
     "        segA_2 = (0,2)\n",
     "        y = (0,1)\n",
     "        \n",
     "        self.assertEqual((0,1), sl.ortogonalProjection(segA_1, segA_2, y))# expected (0,1)\n",
-    "        "
+    "        \n",
+    "    def test_verticallyAlignedAboveSegment(self):\n",
+    "        segA_1 = (0,0)\n",
+    "        segA_2 = (0,1)\n",
+    "        y = (0,2)\n",
+    "        \n",
+    "        self.assertEqual((0,1), sl.ortogonalProjection(segA_1, segA_2, y))\n",
+    "        # Doesn't work : keeps its ordinate even if it is not in the segment.\n",
+    "        \n",
+    "    def test_verticallyAlignedUnderSegment(self):\n",
+    "        segA_1 = (0,0)\n",
+    "        segA_2 = (0,1)\n",
+    "        y = (0,-1)\n",
+    "        \n",
+    "        self.assertEqual((0,1), sl.ortogonalProjection(segA_1, segA_2, y))\n",
+    "    \n",
+    "    def test_diagonallyAlignedAboveSegment(self):\n",
+    "        segA_1 = (0,0)\n",
+    "        segA_2 = (1,1)\n",
+    "        y = (2,2)\n",
+    "        \n",
+    "        self.assertEqual((1,1), sl.ortogonalProjection(segA_1, segA_2, y))"
    ]
   },
   {
@@ -404,6 +462,7 @@
     "    def test_triangle(self):\n",
     "        # This is not a triangle !! This test makes no sense.\n",
     "        # Your way of computing the area of the quadrilateral doesn't make much sense here... Draw it !\n",
+    "        # Raises error of singular matrix in orthoProjection but can't find when and why...\n",
     "        segA_1 = (0,0)\n",
     "        segA_2 = (0,2)\n",
     "        segB_1 = (2,2)\n",
@@ -577,89 +636,52 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "...................F.FFFFFEF.....\n",
-      "======================================================================\n",
-      "ERROR: test_triangle (__main__.TestComputeArea)\n",
-      "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"<ipython-input-10-17213f2fd70b>\", line 29, in test_triangle\n",
-      "    self.assertEqual(2, sl.computeArea(segA_1, segA_2, segB_1, segB_2))\n",
-      "  File \"D:\\Université de Lille\\M1\\Refresher in Computer Science\\CSRefresh_project\\CSRefresh_Project\\solution.py\", line 249, in computeArea\n",
-      "    height = seg_length(x_2, ortogonalProjection(x_1, y_2, x_2))\n",
-      "  File \"D:\\Université de Lille\\M1\\Refresher in Computer Science\\CSRefresh_project\\CSRefresh_Project\\solution.py\", line 231, in ortogonalProjection\n",
-      "    point = np.dot(lin.inv(mat), np.array([-b,-c]))\n",
-      "  File \"D:\\Anaconda3\\lib\\site-packages\\numpy\\linalg\\linalg.py\", line 551, in inv\n",
-      "    ainv = _umath_linalg.inv(a, signature=signature, extobj=extobj)\n",
-      "  File \"D:\\Anaconda3\\lib\\site-packages\\numpy\\linalg\\linalg.py\", line 97, in _raise_linalgerror_singular\n",
-      "    raise LinAlgError(\"Singular matrix\")\n",
-      "numpy.linalg.LinAlgError: Singular matrix\n",
+      "...........F............."
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Projection on Point((0, 0)) and Point((0, 1)) of Point((0, 2) = Point((0, 2))\n",
+      "Projection on Point((0, 0)) and Point((0, 2)) of Point((0, 1) = Point((0, 1))\n",
+      "Projection on Point((0, 0)) and Point((0, 2)) of Point((1, 1) = Point((0, 1))\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
       "\n",
       "======================================================================\n",
-      "FAIL: test_anotherOptusAngle (__main__.TestComputeArea)\n",
+      "FAIL: test_aligned (__main__.TestOrthoProjection)\n",
       "----------------------------------------------------------------------\n",
       "Traceback (most recent call last):\n",
-      "  File \"<ipython-input-10-17213f2fd70b>\", line 69, in test_anotherOptusAngle\n",
-      "    self.assertEqual(2.5, sl.computeArea(segA_1, segA_2, segB_1, segB_2))\n",
-      "AssertionError: 2.5 != 5.510398644698075\n",
+      "  File \"<ipython-input-9-30c4e0888010>\", line 25, in test_aligned\n",
+      "    self.assertEqual((0,1), sl.ortogonalProjection(segA_1, segA_2, y))\n",
+      "AssertionError: Tuples differ: (0, 1) != (0, 2)\n",
       "\n",
-      "======================================================================\n",
-      "FAIL: test_oneOptusAngle (__main__.TestComputeArea)\n",
-      "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"<ipython-input-10-17213f2fd70b>\", line 61, in test_oneOptusAngle\n",
-      "    self.assertEqual(2.5, sl.computeArea(segA_1, segA_2, segB_1, segB_2))\n",
-      "AssertionError: 2.5 != 6.406514819097628\n",
+      "First differing element 1:\n",
+      "1\n",
+      "2\n",
       "\n",
-      "======================================================================\n",
-      "FAIL: test_square (__main__.TestComputeArea)\n",
-      "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"<ipython-input-10-17213f2fd70b>\", line 20, in test_square\n",
-      "    self.assertEqual(1, sl.computeArea(segA_1, segA_2, segB_1, segB_2))\n",
-      "AssertionError: 1 != 2.0\n",
+      "- (0, 1)\n",
+      "?     ^\n",
       "\n",
-      "======================================================================\n",
-      "FAIL: test_trapeziumNegative (__main__.TestComputeArea)\n",
-      "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"<ipython-input-10-17213f2fd70b>\", line 45, in test_trapeziumNegative\n",
-      "    self.assertEqual(1.5, sl.computeArea(segA_1, segA_2, segB_1, segB_2))\n",
-      "AssertionError: 1.5 != 4.0\n",
+      "+ (0, 2)\n",
+      "?     ^\n",
       "\n",
-      "======================================================================\n",
-      "FAIL: test_trapeziumNegativePositive (__main__.TestComputeArea)\n",
-      "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"<ipython-input-10-17213f2fd70b>\", line 53, in test_trapeziumNegativePositive\n",
-      "    self.assertEqual(5, sl.computeArea(segA_1, segA_2, segB_1, segB_2))\n",
-      "AssertionError: 5 != 12.0\n",
-      "\n",
-      "======================================================================\n",
-      "FAIL: test_trapeziumSimplest (__main__.TestComputeArea)\n",
-      "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"<ipython-input-10-17213f2fd70b>\", line 37, in test_trapeziumSimplest\n",
-      "    self.assertEqual(1.5, sl.computeArea(segA_1, segA_2, segB_1, segB_2))\n",
-      "AssertionError: 1.5 != 4.0\n",
-      "\n",
-      "======================================================================\n",
-      "FAIL: test_twoOptusAngles (__main__.TestComputeArea)\n",
-      "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"<ipython-input-10-17213f2fd70b>\", line 77, in test_twoOptusAngles\n",
-      "    self.assertEqual(3, sl.computeArea(segA_1, segA_2, segB_1, segB_2))\n",
-      "AssertionError: 3 != 6.531128874149275\n",
       "\n",
       "----------------------------------------------------------------------\n",
-      "Ran 33 tests in 0.047s\n",
+      "Ran 25 tests in 0.027s\n",
       "\n",
-      "FAILED (failures=7, errors=1)\n"
+      "FAILED (failures=1)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<unittest.runner.TextTestResult run=33 errors=1 failures=7>"
+       "<unittest.runner.TextTestResult run=25 errors=0 failures=1>"
       ]
      },
      "execution_count": 13,
