--- a/solution.ipynb
+++ b/solution.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,10 +48,10 @@
     "    \"\"\"\n",
     "    ## assume the gps knows the exact start and end of the theoretical path:\n",
     "    if coordTh[0] != coordExp[0]:\n",
-    "        coordExp = [coordTh[0]] + [coordExp]\n",
+    "        coordExp.insert(0, coordTh[0])\n",
     "    if coordTh[-1] != coordExp[-1]:\n",
     "        coordExp.append(coordTh[-1])\n",
-    "        \n",
+    "\n",
     "    # initialize values:\n",
     "    area = 0 # the total area between the theoretical and experimental paths\n",
     "    distance = path_length(coordTh) # total theoretical path length\n",
@@ -59,15 +59,11 @@
     "    i = 0 # iterator over the theoretical path\n",
     "    \n",
     "    # start iterations:\n",
-    "    while i+1 <= len(coordTh) and j+1 <= len(coordExp):\n",
+    "    while (i+1 < len(coordTh) and j+1 < len(coordExp)):        \n",
     "        # we work on a subsegment [coordTh[i], coordTh[i+1]] \n",
     "        \n",
     "        # search for an intersection:\n",
-    "        intersectPoint = intersection(coordTh[i], coordTh[i+1], coordExp[j], coordExp[j+1])\n",
-    "        \n",
-    "        # compute the orthogonal projections of the experimental points on the subsegment\n",
-    "        ort1 = ortogonalProjection(coordTh[i], coordTh[i+1], coordExp[j])\n",
-    "        ort2 = ortogonalProjection(coordTh[i], coordTh[i+1], coordExp[j+1]) \n",
+    "        intersectPoint = intersection(coordTh[i], coordTh[i+1], coordExp[j], coordExp[j+1]) \n",
     "        \n",
     "        if intersectPoint:\n",
     "            if intersectPoint == coordTh[i+1] == coordExp[j]:\n",
@@ -87,46 +83,14 @@
     "                area += areaRightTriangle(base, height)\n",
     "                \n",
     "                j += 1 # advance along the experimental path  \n",
-    "        else:      \n",
-    "            if ort1 and ort2: # What is this for ? There is no chance they are None.\n",
-    "                #area += computeArea(ort1, ort2, coordExp[j], coordExp[j+1])\n",
-    "                \n",
-    "                # area is given by the triangle -> ort1, ort2, exp[j]\n",
-    "                base = seg_length(coordExp[j], ort2)\n",
-    "                height =  seg_length(ort1, ortogonalProjection(coordExp[j], ort2, ort1))\n",
-    "                area += areaRightTriangle(base, height)\n",
-    "                #              and the triangle ->  exp[j], exp[j+1], ort2\n",
-    "                base = seg_length(coordExp[j], ort2)\n",
-    "                height =  seg_length(exp[j+1], ortogonalProjection(coordExp[j], ort2, exp[j+1]))\n",
-    "                area += areaRightTriangle(base, height)\n",
-    "                # advance along the experimental path\n",
-    "                j += 1 \n",
-    "            elif ort1:\n",
-    "                # area is given by the triangle -> exp[j], ort1, exp[j+1]\n",
-    "                base = seg_length(coordExp[j], coordExp[j+1])\n",
-    "                height =  seg_length(ort1, ortogonalProjection(coordExp[j], coordExp[j+1], ort1))\n",
-    "                area += areaRightTriangle(base, height)\n",
-    "                #              and the triangle -> ort1, exp[j+1], th[i+1]\n",
-    "                base = seg_length(coordTh[i+1], coordExp[j+1])\n",
-    "                height =  seg_length(ort1, ortogonalProjection(coordExp[j], coordExp[j+1], ort1))\n",
-    "                area += areaRightTriangle(base, height)\n",
-    "                # advance along the experimental path\n",
-    "                j += 1 \n",
-    "            elif ort2:\n",
-    "                # area is given by the triangle -> exp[j], th[i], exp[j+1]\n",
-    "                base = seg_length(coordExp[j], coordExp[j+1])\n",
-    "                height =  seg_length(coordTh[i], ortogonalProjection(coordExp[j], coordExp[j+1], coordTh[i]))\n",
-    "                area += areaRightTriangle(base, height)\n",
-    "                #              and the triangle -> th[i], exp[j+1], ort2\n",
-    "                base = seg_length(coordTh[i], coordExp[j+1])\n",
-    "                height =  seg_length(ort2, ortogonalProjection(coordTh[i], coordExp[j+1], ort2))\n",
-    "                area += areaRightTriangle(base, height)\n",
-    "                # advance along the experimental path\n",
-    "                j += 1 \n",
-    "            else:\n",
-    "                # advance along the theoretical path\n",
-    "                i += 1 \n",
-    "                \n",
+    "        elif not pointBelongsToSegment(coordTh[i], coordTh[i+1], ortogonalProjection(coordTh[i], coordTh[i+1], coordExp[j])):      \n",
+    "            area += computeArea(coordTh[i], coordTh[i+1], coordExp[j], coordExp[j+1])\n",
+    "            j += 1 # advance along the experimental path  \n",
+    "        \n",
+    "        else:\n",
+    "            # we're outside of the subsegment\n",
+    "            i += 1 # advance along the theoretical path\n",
+    "        \n",
     "        ## TODO check for backtracking:\n",
     "        \n",
     "        # a) if ort1 or ort2 in in segment [ coordTh[i] , prevOrt1 ] or [ coordTh[i] , prevOrt2 ]\n",
@@ -166,7 +130,7 @@
     "    \"\"\"\n",
     "\n",
     "    # First case : the two lines are vertical\n",
-    "    if (x_1[0] == x_2[0] and y_1[0]  == y_2[0]) :\n",
+    "    if (x_1[0] == x_2[0] and y_1[0] == y_2[0]) :\n",
     "        intersect = None\n",
     "    \n",
     "    # Second case : only the first line is vertical\n",
@@ -246,10 +210,6 @@
     "    \n",
     "    ## express the line passing by x_1 and x_2\n",
     "    ## line = (x_2[1]-x_1[1])/(x_2[0]-x_1[0])\n",
-    "    print(\"Projection on Point(\" + str(x_1) \\\n",
-    "          + \") and Point(\" + str(x_2) \\\n",
-    "          + \") of Point(\" + str(y)\\\n",
-    "          +\" = Point(\" + str(newPoint) + \")\")\n",
     "    return newPoint\n",
     "                       \n",
     "def computeArea(x_1, x_2, y_1, y_2):               \n",
@@ -304,6 +264,36 @@
     "\n",
     "    return True"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.625"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "theo = [(0,x) for x in range(5)]\n",
+    "expe = [(1,x) for x in range(5)]\n",
+    "\n",
+    "trajectoryError(theo, expe)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
