fix test.ipynb : reread classes TestComputeArea and TestIntersection to remove errors. Additional minor changes.

--- a/test.ipynb
+++ b/test.ipynb
@@ -267,28 +267,34 @@
     "##    def test_typeErrorPath(self):\n",
     "##        with self.assertRaises(TypeError):\n",
     "##            path_length('a',(0,0))\n",
+    "    \n",
+    "    def test_nullSegment(self):\n",
+    "        a = (5,5)\n",
+    "        b = (5,5)\n",
     "        \n",
+    "        self.assertEqual(0,sl.seg_length(a,b))\n",
+    "    \n",
     "    def test_simplestSegment(self):\n",
     "        a = (0,0)\n",
     "        b = (1,0)\n",
     "        \n",
-    "        self.assertEqual(1, sl.seg_length(a,b))# expected 1\n",
+    "        self.assertEqual(1, sl.seg_length(a,b))\n",
     "        \n",
     "    def test_simplestSegmentInverted(self):\n",
     "        a = (0,0)\n",
     "        b = (1,0)\n",
     "        \n",
-    "        self.assertEqual(1, sl.seg_length(b,a))# expected 1\n",
+    "        self.assertEqual(1, sl.seg_length(b,a))\n",
     "        \n",
     "    def test_simplestPath(self):\n",
     "        path = [(0,0),(0,1),(1,1)]\n",
     "        \n",
-    "        self.assertEqual(2, sl.path_length(path))# expected 2\n",
+    "        self.assertEqual(2, sl.path_length(path))\n",
     "        \n",
     "    def test_simplestPathInverted(self):\n",
     "        invPath = [(0,0),(0,-1),(-1,-1)]\n",
     "        \n",
-    "        self.assertEqual(2, sl.path_length(invPath))# expected 2\n",
+    "        self.assertEqual(2, sl.path_length(invPath))\n",
     "        "
    ]
   },
@@ -309,7 +315,7 @@
     "        segB_1 = (2,0)\n",
     "        segB_2 = (0,2)\n",
     "        \n",
-    "        self.assertEqual((1.0,1.0), sl.intersection(segA_1, segA_2, segB_1, segB_2))# expected (1,1)\n",
+    "        self.assertEqual((1.0,1.0), sl.intersection(segA_1, segA_2, segB_1, segB_2))\n",
     "        \n",
     "    def test_noIntersection(self):\n",
     "        segA_1 = (0,0)\n",
@@ -317,7 +323,7 @@
     "        segB_1 = (1,0)\n",
     "        segB_2 = (1,1)\n",
     "        \n",
-    "        self.assertEqual(None, sl.intersection(segA_1, segA_2, segB_1, segB_2))# expected None\n",
+    "        self.assertEqual(None, sl.intersection(segA_1, segA_2, segB_1, segB_2))\n",
     "        \n",
     "    def test_commonPoint(self):\n",
     "        segA_1 = (0,0)\n",
@@ -325,34 +331,34 @@
     "        segB_1 = (0,0)\n",
     "        segB_2 = (0,-1)\n",
     "        \n",
-    "        self.assertEqual((0.0,0.0), sl.intersection(segA_1, segA_2, segB_1, segB_2))# expected (0,0)\n",
+    "        self.assertEqual((0.0,0.0), sl.intersection(segA_1, segA_2, segB_1, segB_2))\n",
     "        \n",
     "    def test_permutationOrderOne(self):\n",
-    "         ## same segemnts as test_simplestIntersection but given in a different order\n",
-    "        segA_1 = (0,0)\n",
-    "        segA_2 = (2,2)\n",
+    "         ## same segments as test_simplestIntersection but given in a different order\n",
+    "        segA_1 = (2,2)\n",
+    "        segA_2 = (0,0)\n",
     "        segB_1 = (2,0)\n",
     "        segB_2 = (0,2)\n",
     "        \n",
-    "        self.assertEqual((1.0,1.0), sl.intersection(segA_2, segA_1, segB_1, segB_2))# expected (1,1)\n",
+    "        self.assertEqual((1.0,1.0), sl.intersection(segA_2, segA_1, segB_1, segB_2))\n",
     "        \n",
     "    def test_permutationOrderTwo(self):\n",
-    "         ## same segemnts as test_simplestIntersection but given in a different order\n",
+    "         ## same segments as test_simplestIntersection but given in a different order\n",
     "        segA_1 = (0,0)\n",
     "        segA_2 = (2,2)\n",
-    "        segB_1 = (2,0)\n",
-    "        segB_2 = (0,2)\n",
+    "        segB_1 = (0,2)\n",
+    "        segB_2 = (2,0)\n",
     "        \n",
-    "        self.assertEqual((1.0,1.0), sl.intersection(segA_1, segA_2, segB_2, segB_1))# expected (1,1)\n",
+    "        self.assertEqual((1.0,1.0), sl.intersection(segA_1, segA_2, segB_2, segB_1))\n",
     "        \n",
     "    def test_permutationOrderThree(self):\n",
-    "         ## same segemnts as test_simplestIntersection but given in a different order\n",
-    "        segA_1 = (0,0)\n",
-    "        segA_2 = (2,2)\n",
-    "        segB_1 = (2,0)\n",
-    "        segB_2 = (0,2)\n",
+    "         ## same segments as test_simplestIntersection but given in a different order\n",
+    "        segA_1 = (2,2)\n",
+    "        segA_2 = (0,0)\n",
+    "        segB_1 = (0,2)\n",
+    "        segB_2 = (2,0)\n",
     "        \n",
-    "        self.assertEqual((1.0,1.0), sl.intersection(segB_1, segB_2, segA_1, segA_2))# expected (1,1)\n",
+    "        self.assertEqual((1.0,1.0), sl.intersection(segB_1, segB_2, segA_1, segA_2))\n",
     "\n"
    ]
   },
@@ -372,42 +378,42 @@
     "        segA_2 = (0,2)\n",
     "        y = (-1,-1)\n",
     "        \n",
-    "        self.assertEqual(None, sl.ortogonalProjection(segA_1, segA_2, y))# expected (0,1)\n",
+    "        self.assertEqual(None, sl.ortogonalProjection(segA_1, segA_2, y))\n",
     "\n",
     "    def test_projectionOnVerticalLineFromRight(self):\n",
     "        segA_1 = (0,0)\n",
     "        segA_2 = (0,2)\n",
     "        y = (1,1)\n",
     "        \n",
-    "        self.assertEqual((0,1), sl.ortogonalProjection(segA_1, segA_2, y))# expected (0,1)\n",
+    "        self.assertEqual((0,1), sl.ortogonalProjection(segA_1, segA_2, y))\n",
     "        \n",
     "    def test_projectionOnVerticalLineFromLeft(self):\n",
     "        segA_1 = (0,0)\n",
     "        segA_2 = (0,2)\n",
     "        y = (-1,1)\n",
     "        \n",
-    "        self.assertEqual((0,1), sl.ortogonalProjection(segA_1, segA_2, y))# expected (0,1)\n",
+    "        self.assertEqual((0,1), sl.ortogonalProjection(segA_1, segA_2, y))\n",
     "        \n",
     "    def test_projectionOnHorizontalLineFromAbove(self):\n",
     "        segA_1 = (0,0)\n",
     "        segA_2 = (2,0)\n",
     "        y = (1,1)\n",
     "        \n",
-    "        self.assertEqual((1,0), sl.ortogonalProjection(segA_1, segA_2, y))# expected (1,0)\n",
+    "        self.assertEqual((1,0), sl.ortogonalProjection(segA_1, segA_2, y))\n",
     "    \n",
     "    def test_projectionOnHorizontalLineFromBelow(self):\n",
     "        segA_1 = (0,0)\n",
     "        segA_2 = (2,0)\n",
     "        y = (1,-1)\n",
     "        \n",
-    "        self.assertEqual((1,0), sl.ortogonalProjection(segA_1, segA_2, y))# expected (1,0)\n",
+    "        self.assertEqual((1,0), sl.ortogonalProjection(segA_1, segA_2, y))\n",
     "    \n",
     "    def test_alreadyInSegment(self):\n",
     "        segA_1 = (0,0)\n",
     "        segA_2 = (0,2)\n",
     "        y = (0,1)\n",
     "        \n",
-    "        self.assertEqual((0,1), sl.ortogonalProjection(segA_1, segA_2, y))# expected (0,1)\n",
+    "        self.assertEqual((0,1), sl.ortogonalProjection(segA_1, segA_2, y))\n",
     "        \n",
     "    def test_verticallyAlignedAboveSegment(self):\n",
     "        segA_1 = (0,0)\n",
@@ -422,14 +428,14 @@
     "        segA_2 = (0,1)\n",
     "        y = (0,-1)\n",
     "        \n",
-    "        self.assertEqual((0,1), sl.ortogonalProjection(segA_1, segA_2, y))\n",
+    "        self.assertEqual(None, sl.ortogonalProjection(segA_1, segA_2, y))\n",
     "    \n",
     "    def test_diagonallyAlignedAboveSegment(self):\n",
     "        segA_1 = (0,0)\n",
     "        segA_2 = (1,1)\n",
     "        y = (2,2)\n",
     "        \n",
-    "        self.assertEqual((1,1), sl.ortogonalProjection(segA_1, segA_2, y))"
+    "        self.assertEqual(None, sl.ortogonalProjection(segA_1, segA_2, y))"
    ]
   },
   {
@@ -465,28 +471,44 @@
     "        # Raises error of singular matrix in orthoProjection but can't find when and why...\n",
     "        segA_1 = (0,0)\n",
     "        segA_2 = (0,2)\n",
-    "        segB_1 = (2,2)\n",
+    "        segB_1 = (1,1)\n",
+    "        segB_2 = (1,1)\n",
+    "        \n",
+    "        self.assertEqual(2, sl.computeArea(segA_1, segA_2, segB_1, segB_2))\n",
+    "        \n",
+    "    def test_triangle_different_order(self):\n",
+    "        segA_1 = (0,0)\n",
+    "        segA_2 = (1,1)\n",
+    "        segB_1 = (0,2)\n",
+    "        segB_2 = (1,1)\n",
+    "        \n",
+    "        self.assertEqual(2, sl.computeArea(segA_1, segA_2, segB_1, segB_2))\n",
+    "        \n",
+    "    def test_triangle_another_order(self):\n",
+    "        segA_1 = (1,1)\n",
+    "        segA_2 = (0,0)\n",
+    "        segB_1 = (0,2)\n",
     "        segB_2 = (1,1)\n",
     "        \n",
     "        self.assertEqual(2, sl.computeArea(segA_1, segA_2, segB_1, segB_2))\n",
     "    \n",
-    "    def test_trapeziumSimplest(self):\n",
+    "    def test_trapezium_simplest(self):\n",
     "        segA_1 = (0,0)\n",
     "        segA_2 = (0,1)\n",
-    "        segB_1 = (1,1)\n",
-    "        segB_2 = (2,0)\n",
+    "        segB_1 = (1,0)\n",
+    "        segB_2 = (2,1)\n",
     "        \n",
     "        self.assertEqual(1.5, sl.computeArea(segA_1, segA_2, segB_1, segB_2))\n",
     "        \n",
-    "    def test_trapeziumNegative(self):\n",
+    "    def test_trapezium_simplest_negative(self):\n",
     "        segA_1 = (0,0)\n",
     "        segA_2 = (0,-1)\n",
-    "        segB_1 = (-1,-1)\n",
-    "        segB_2 = (-2,0)\n",
+    "        segB_1 = (-1,0)\n",
+    "        segB_2 = (-2,-1)\n",
     "        \n",
     "        self.assertEqual(1.5, sl.computeArea(segA_1, segA_2, segB_1, segB_2))\n",
     "        \n",
-    "    def test_trapeziumNegativePositive(self):\n",
+    "    def test_trapezium_negative_positive(self):\n",
     "        segA_1 = (-1,-1)\n",
     "        segA_2 = (-1,1)\n",
     "        segB_1 = (1,1)\n",
@@ -494,7 +516,7 @@
     "        \n",
     "        self.assertEqual(5, sl.computeArea(segA_1, segA_2, segB_1, segB_2))\n",
     "        \n",
-    "    def test_oneOptusAngle(self):\n",
+    "    def test_one_obtuse_angle(self):\n",
     "        segA_1 = (0,0)\n",
     "        segA_2 = (2,0)\n",
     "        segB_1 = (-1,1)\n",
@@ -502,7 +524,7 @@
     "        \n",
     "        self.assertEqual(2.5, sl.computeArea(segA_1, segA_2, segB_1, segB_2))\n",
     "    \n",
-    "    def test_anotherOptusAngle(self):\n",
+    "    def test_another_obtuse_angle(self):\n",
     "        segA_1 = (0,0)\n",
     "        segA_2 = (2,0)\n",
     "        segB_1 = (0,1)\n",
@@ -510,7 +532,7 @@
     "        \n",
     "        self.assertEqual(2.5, sl.computeArea(segA_1, segA_2, segB_1, segB_2))\n",
     "    \n",
-    "    def test_twoOptusAngles(self):\n",
+    "    def test_two_obtuse_angles(self):\n",
     "        segA_1 = (0,0)\n",
     "        segA_2 = (2,0)\n",
     "        segB_1 = (-1,1)\n",
