fix: corrected incorect test values

--- a/test.ipynb
+++ b/test.ipynb
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -378,7 +378,7 @@
     "        segA_2 = (0,2)\n",
     "        y = (-1,-1)\n",
     "        \n",
-    "        self.assertEqual(None, sl.ortogonalProjection(segA_1, segA_2, y))\n",
+    "        self.assertEqual((0,-1), sl.ortogonalProjection(segA_1, segA_2, y))\n",
     "\n",
     "    def test_projectionOnVerticalLineFromRight(self):\n",
     "        segA_1 = (0,0)\n",
@@ -420,27 +420,26 @@
     "        segA_2 = (0,1)\n",
     "        y = (0,2)\n",
     "        \n",
-    "        self.assertEqual((0,1), sl.ortogonalProjection(segA_1, segA_2, y))\n",
-    "        # Doesn't work : keeps its ordinate even if it is not in the segment.\n",
+    "        self.assertEqual((0,2), sl.ortogonalProjection(segA_1, segA_2, y))\n",
     "        \n",
     "    def test_verticallyAlignedUnderSegment(self):\n",
     "        segA_1 = (0,0)\n",
     "        segA_2 = (0,1)\n",
     "        y = (0,-1)\n",
     "        \n",
-    "        self.assertEqual(None, sl.ortogonalProjection(segA_1, segA_2, y))\n",
+    "        self.assertEqual((0,-1), sl.ortogonalProjection(segA_1, segA_2, y))\n",
     "    \n",
     "    def test_diagonallyAlignedAboveSegment(self):\n",
     "        segA_1 = (0,0)\n",
     "        segA_2 = (1,1)\n",
     "        y = (2,2)\n",
     "        \n",
-    "        self.assertEqual(None, sl.ortogonalProjection(segA_1, segA_2, y))"
+    "        self.assertEqual((2,2), sl.ortogonalProjection(segA_1, segA_2, y))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -543,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -584,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -651,20 +650,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "............EF....FF......F.FFFFFEF......FF...FF.\n",
+      ".............E.............F.FFFFFEFEF......FF...FF.\n",
       "======================================================================\n",
       "ERROR: test_diagonallyAlignedAboveSegment (__main__.TestOrthoProjection)\n",
       "----------------------------------------------------------------------\n",
       "Traceback (most recent call last):\n",
-      "  File \"<ipython-input-9-f23fac124b03>\", line 68, in test_diagonallyAlignedAboveSegment\n",
-      "    self.assertEqual((1,1), sl.ortogonalProjection(segA_1, segA_2, y))\n",
+      "  File \"<ipython-input-19-93ac9b08d2be>\", line 67, in test_diagonallyAlignedAboveSegment\n",
+      "    self.assertEqual((2,2), sl.ortogonalProjection(segA_1, segA_2, y))\n",
       "  File \"C:\\Users\\Zotto\\Documents\\_Scuola\\DataSci\\M1-S1\\RefresherCS\\CSRefresh_Project\\solution.py\", line 197, in ortogonalProjection\n",
       "    point = np.dot(lin.inv(mat), np.array([-b,-c]))\n",
       "  File \"C:\\Users\\Zotto\\Anaconda3\\lib\\site-packages\\numpy\\linalg\\linalg.py\", line 551, in inv\n",
@@ -677,7 +676,7 @@
       "ERROR: test_triangle (__main__.TestComputeArea)\n",
       "----------------------------------------------------------------------\n",
       "Traceback (most recent call last):\n",
-      "  File \"<ipython-input-10-c0687cf4cfde>\", line 31, in test_triangle\n",
+      "  File \"<ipython-input-20-288d2411a107>\", line 31, in test_triangle\n",
       "    self.assertEqual(2, sl.computeArea(segA_1, segA_2, segB_1, segB_2))\n",
       "  File \"C:\\Users\\Zotto\\Documents\\_Scuola\\DataSci\\M1-S1\\RefresherCS\\CSRefresh_Project\\solution.py\", line 214, in computeArea\n",
       "    height = seg_length(x_2, ortogonalProjection(x_1, y_2, x_2))\n",
@@ -690,62 +689,34 @@
       "numpy.linalg.LinAlgError: Singular matrix\n",
       "\n",
       "======================================================================\n",
-      "FAIL: test_projectionNotInSegment (__main__.TestOrthoProjection)\n",
+      "ERROR: test_triangle_different_order (__main__.TestComputeArea)\n",
       "----------------------------------------------------------------------\n",
       "Traceback (most recent call last):\n",
-      "  File \"<ipython-input-9-f23fac124b03>\", line 11, in test_projectionNotInSegment\n",
-      "    self.assertEqual(None, sl.ortogonalProjection(segA_1, segA_2, y))# expected (0,1)\n",
-      "AssertionError: None != (0, -1)\n",
+      "  File \"<ipython-input-20-288d2411a107>\", line 39, in test_triangle_different_order\n",
+      "    self.assertEqual(2, sl.computeArea(segA_1, segA_2, segB_1, segB_2))\n",
+      "  File \"C:\\Users\\Zotto\\Documents\\_Scuola\\DataSci\\M1-S1\\RefresherCS\\CSRefresh_Project\\solution.py\", line 219, in computeArea\n",
+      "    height =  seg_length(y_1, ortogonalProjection(x_1, y_2, y_1))\n",
+      "  File \"C:\\Users\\Zotto\\Documents\\_Scuola\\DataSci\\M1-S1\\RefresherCS\\CSRefresh_Project\\solution.py\", line 197, in ortogonalProjection\n",
+      "    point = np.dot(lin.inv(mat), np.array([-b,-c]))\n",
+      "  File \"C:\\Users\\Zotto\\Anaconda3\\lib\\site-packages\\numpy\\linalg\\linalg.py\", line 551, in inv\n",
+      "    ainv = _umath_linalg.inv(a, signature=signature, extobj=extobj)\n",
+      "  File \"C:\\Users\\Zotto\\Anaconda3\\lib\\site-packages\\numpy\\linalg\\linalg.py\", line 97, in _raise_linalgerror_singular\n",
+      "    raise LinAlgError(\"Singular matrix\")\n",
+      "numpy.linalg.LinAlgError: Singular matrix\n",
       "\n",
       "======================================================================\n",
-      "FAIL: test_verticallyAlignedAboveSegment (__main__.TestOrthoProjection)\n",
+      "FAIL: test_another_obtuse_angle (__main__.TestComputeArea)\n",
       "----------------------------------------------------------------------\n",
       "Traceback (most recent call last):\n",
-      "  File \"<ipython-input-9-f23fac124b03>\", line 53, in test_verticallyAlignedAboveSegment\n",
-      "    self.assertEqual((0,1), sl.ortogonalProjection(segA_1, segA_2, y))\n",
-      "AssertionError: Tuples differ: (0, 1) != (0, 2)\n",
-      "\n",
-      "First differing element 1:\n",
-      "1\n",
-      "2\n",
-      "\n",
-      "- (0, 1)\n",
-      "?     ^\n",
-      "\n",
-      "+ (0, 2)\n",
-      "?     ^\n",
-      "\n",
-      "\n",
-      "======================================================================\n",
-      "FAIL: test_verticallyAlignedUnderSegment (__main__.TestOrthoProjection)\n",
-      "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"<ipython-input-9-f23fac124b03>\", line 61, in test_verticallyAlignedUnderSegment\n",
-      "    self.assertEqual((0,1), sl.ortogonalProjection(segA_1, segA_2, y))\n",
-      "AssertionError: Tuples differ: (0, 1) != (0, -1)\n",
-      "\n",
-      "First differing element 1:\n",
-      "1\n",
-      "-1\n",
-      "\n",
-      "- (0, 1)\n",
-      "+ (0, -1)\n",
-      "?     +\n",
-      "\n",
-      "\n",
-      "======================================================================\n",
-      "FAIL: test_anotherOptusAngle (__main__.TestComputeArea)\n",
-      "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"<ipython-input-10-c0687cf4cfde>\", line 71, in test_anotherOptusAngle\n",
+      "  File \"<ipython-input-20-288d2411a107>\", line 87, in test_another_obtuse_angle\n",
       "    self.assertEqual(2.5, sl.computeArea(segA_1, segA_2, segB_1, segB_2))\n",
       "AssertionError: 2.5 != 5.510398644698075\n",
       "\n",
       "======================================================================\n",
-      "FAIL: test_oneOptusAngle (__main__.TestComputeArea)\n",
+      "FAIL: test_one_obtuse_angle (__main__.TestComputeArea)\n",
       "----------------------------------------------------------------------\n",
       "Traceback (most recent call last):\n",
-      "  File \"<ipython-input-10-c0687cf4cfde>\", line 63, in test_oneOptusAngle\n",
+      "  File \"<ipython-input-20-288d2411a107>\", line 79, in test_one_obtuse_angle\n",
       "    self.assertEqual(2.5, sl.computeArea(segA_1, segA_2, segB_1, segB_2))\n",
       "AssertionError: 2.5 != 6.406514819097628\n",
       "\n",
@@ -753,39 +724,47 @@
       "FAIL: test_square (__main__.TestComputeArea)\n",
       "----------------------------------------------------------------------\n",
       "Traceback (most recent call last):\n",
-      "  File \"<ipython-input-10-c0687cf4cfde>\", line 20, in test_square\n",
+      "  File \"<ipython-input-20-288d2411a107>\", line 20, in test_square\n",
       "    self.assertEqual(1, sl.computeArea(segA_1, segA_2, segB_1, segB_2))\n",
       "AssertionError: 1 != 2.0\n",
       "\n",
       "======================================================================\n",
-      "FAIL: test_trapeziumNegative (__main__.TestComputeArea)\n",
+      "FAIL: test_trapezium_negative_positive (__main__.TestComputeArea)\n",
       "----------------------------------------------------------------------\n",
       "Traceback (most recent call last):\n",
-      "  File \"<ipython-input-10-c0687cf4cfde>\", line 47, in test_trapeziumNegative\n",
-      "    self.assertEqual(1.5, sl.computeArea(segA_1, segA_2, segB_1, segB_2))\n",
-      "AssertionError: 1.5 != 4.0\n",
-      "\n",
-      "======================================================================\n",
-      "FAIL: test_trapeziumNegativePositive (__main__.TestComputeArea)\n",
-      "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"<ipython-input-10-c0687cf4cfde>\", line 55, in test_trapeziumNegativePositive\n",
+      "  File \"<ipython-input-20-288d2411a107>\", line 71, in test_trapezium_negative_positive\n",
       "    self.assertEqual(5, sl.computeArea(segA_1, segA_2, segB_1, segB_2))\n",
       "AssertionError: 5 != 12.0\n",
       "\n",
       "======================================================================\n",
-      "FAIL: test_trapeziumSimplest (__main__.TestComputeArea)\n",
+      "FAIL: test_trapezium_simplest (__main__.TestComputeArea)\n",
       "----------------------------------------------------------------------\n",
       "Traceback (most recent call last):\n",
-      "  File \"<ipython-input-10-c0687cf4cfde>\", line 39, in test_trapeziumSimplest\n",
+      "  File \"<ipython-input-20-288d2411a107>\", line 55, in test_trapezium_simplest\n",
       "    self.assertEqual(1.5, sl.computeArea(segA_1, segA_2, segB_1, segB_2))\n",
-      "AssertionError: 1.5 != 4.0\n",
+      "AssertionError: 1.5 != 3.774851773445586\n",
       "\n",
       "======================================================================\n",
-      "FAIL: test_twoOptusAngles (__main__.TestComputeArea)\n",
+      "FAIL: test_trapezium_simplest_negative (__main__.TestComputeArea)\n",
       "----------------------------------------------------------------------\n",
       "Traceback (most recent call last):\n",
-      "  File \"<ipython-input-10-c0687cf4cfde>\", line 79, in test_twoOptusAngles\n",
+      "  File \"<ipython-input-20-288d2411a107>\", line 63, in test_trapezium_simplest_negative\n",
+      "    self.assertEqual(1.5, sl.computeArea(segA_1, segA_2, segB_1, segB_2))\n",
+      "AssertionError: 1.5 != 3.774851773445586\n",
+      "\n",
+      "======================================================================\n",
+      "FAIL: test_triangle_another_order (__main__.TestComputeArea)\n",
+      "----------------------------------------------------------------------\n",
+      "Traceback (most recent call last):\n",
+      "  File \"<ipython-input-20-288d2411a107>\", line 47, in test_triangle_another_order\n",
+      "    self.assertEqual(2, sl.computeArea(segA_1, segA_2, segB_1, segB_2))\n",
+      "AssertionError: 2 != 0.0\n",
+      "\n",
+      "======================================================================\n",
+      "FAIL: test_two_obtuse_angles (__main__.TestComputeArea)\n",
+      "----------------------------------------------------------------------\n",
+      "Traceback (most recent call last):\n",
+      "  File \"<ipython-input-20-288d2411a107>\", line 95, in test_two_obtuse_angles\n",
       "    self.assertEqual(3, sl.computeArea(segA_1, segA_2, segB_1, segB_2))\n",
       "AssertionError: 3 != 6.531128874149275\n",
       "\n",
@@ -822,18 +801,18 @@
       "AssertionError: 1 != 1.625\n",
       "\n",
       "----------------------------------------------------------------------\n",
-      "Ran 49 tests in 0.079s\n",
+      "Ran 52 tests in 0.063s\n",
       "\n",
-      "FAILED (failures=14, errors=2)\n"
+      "FAILED (failures=12, errors=3)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<unittest.runner.TextTestResult run=49 errors=2 failures=14>"
+       "<unittest.runner.TextTestResult run=52 errors=3 failures=12>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
